[gd_scene load_steps=9 format=3 uid="uid://cfu8rn3pat1lg"]

[ext_resource type="Script" path="res://src/game.gd" id="1_2dqfg"]
[ext_resource type="Script" path="res://src/controls.gd" id="1_ac08e"]
[ext_resource type="Theme" uid="uid://des6yfx7nv5su" path="res://theme.tres" id="3_8k882"]
[ext_resource type="AudioStream" uid="uid://bkhumuoy0fw32" path="res://audio/music.ogg" id="4_tp11l"]
[ext_resource type="AudioStream" uid="uid://cg5mdh76m35vl" path="res://audio/win.ogg" id="5_n2xa6"]
[ext_resource type="AudioStream" uid="uid://b0itnxphp8v61" path="res://audio/spawn.ogg" id="5_tug2d"]
[ext_resource type="AudioStream" uid="uid://6bi8x1c8r4c7" path="res://audio/dead.ogg" id="6_bebwd"]
[ext_resource type="AudioStream" uid="uid://uxowdir2or3i" path="res://audio/pick.ogg" id="6_nvxsd"]

[node name="Main" type="Node"]
script = ExtResource("1_2dqfg")

[node name="Controls" type="Node" parent="."]
script = ExtResource("1_ac08e")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Menu" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Leaderboard" type="VBoxContainer" parent="UI/Menu"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_top = 19.0
offset_right = 363.0
offset_bottom = 19.0
grow_vertical = 2

[node name="Panel" type="Panel" parent="UI/Menu"]
custom_minimum_size = Vector2(820, 150)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -75.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2

[node name="Message" type="Label" parent="UI/Menu/Panel"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_8k882")
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1

[node name="Ending" type="Panel" parent="UI/Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="List" type="VBoxContainer" parent="UI/Menu/Ending"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Spacer2" type="Label" parent="UI/Menu/Ending/List"]
layout_mode = 2
theme = ExtResource("3_8k882")

[node name="Winner" type="Label" parent="UI/Menu/Ending/List"]
layout_mode = 2
theme = ExtResource("3_8k882")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Underline" type="ColorRect" parent="UI/Menu/Ending/List"]
layout_mode = 2
theme = ExtResource("3_8k882")

[node name="EndBoard" type="VBoxContainer" parent="UI/Menu/Ending/List"]
layout_mode = 2

[node name="Spacer3" type="Label" parent="UI/Menu/Ending/List"]
layout_mode = 2
theme = ExtResource("3_8k882")

[node name="Winner2" type="Label" parent="UI/Menu/Ending/List"]
layout_mode = 2
theme = ExtResource("3_8k882")
text = "press space to lobby"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
z_index = 100

[node name="LaunchTimer" type="Timer" parent="."]
one_shot = true

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ItemTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_tp11l")
bus = &"Music"

[node name="WinSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_n2xa6")

[node name="SpawnSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_tug2d")
max_polyphony = 8

[node name="DeadSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_bebwd")
pitch_scale = 0.7
max_polyphony = 8

[node name="PickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_nvxsd")
pitch_scale = 6.0
max_polyphony = 8
